# dfd

./: .env.example  .env.example.docker  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  drizzle.config.ts  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  vite.config.ts
dfd/: __main__.py  api.py  database.py  view.py
dfd/static/: index.css  index.js
dfd/templates/: index.html
drizzle/: index.js
src/: hooks.server.ts
src/components/molecules/: FilterItem.svelte  FilterList.svelte  NewFilterItem.svelte
src/lib/api/: filters.ts
src/lib/server/: database.ts
src/routes/(app)/: +page.svelte  +page.ts
